--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         <main>   
             <section>
-                <h2>Hello, I am a student at <a href="https://www.thinkful.com/bootcamp/web-development"> Thinkful!</a></h2>
-                <h3>I am a future software engineer</h3>
+                <h1>Hello, I am a student at <a href="https://www.thinkful.com/bootcamp/web-development"> Thinkful!</a></h1>
+                <h3>I am a future software engineer, and I am currently located in Albany Oregon!</h3>
                 <img src="images/picture-of-me.jpg" alt="A picture of me" width="300" height="350">
                 <h3>Reasons I want to become a developer</h3>
             <hr>
@@ -28,22 +28,24 @@
 
             <hr>
 
-            <section>
-                <h1>Who am I?</h1>
+                <h2>Who am I?</h2>
                 <p>My name is Daunte but you can call me Kobe. I currently live in Oregon, USA but have plans to move elsewhere to see, and live in different culters. I also love to relax and play video games even though most of the time I'm not really relax. I enjoy going out to movies and have been starting to read a lot more often!</p>
-            </section>
-
-            <section>
+                <ol>
+                    <li>I enjoy playing video games.</li>
+                    <li>I ldove going out to the movies</li>
+                    <li>I have also been getting into reading more often</li>
+                </ol>
+            <div>
                 <!-- Here I am trying to link my socials as well as a google maps image of my city Albany OR, and a "email me" buttom-->
                 <article>
-                    <h2>Some Ways to Reach Out To Me</h2>
+                    <h3>Some Ways to Reach Out To Me</h3>
                     <p>Here are some links and ways to reach out to me, as well as my city!</p>
                     <a href="https://www.linkedin.com/in/kobe-paiz-78a855257/">My LinkedIn Page</a>
                     <a href="https://github.com/DauntesDeveloping">My Github Page</a>
                     <hr>
                     <p>Kobepaiz5@gmail.com</p>
                 </article>
-            </section>
+            </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90864.65551827442!2d-123.17235952268399!3d44.62727809955507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54c0175e11d847bf%3A0x1fd5d9f06960a700!2sAlbany%2C%20OR!5e0!3m2!1sen!2sus!4v1683077572358!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </main>
 
